--- a/.github/workflows/changes.yml
+++ b/.github/workflows/changes.yml
@@ -13,8 +13,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: setup git config
-        uses: nisargshah1410/git_com@v1.2
+        uses: nisargshah1410/git_com@v1.3
         with:
           github_handle: NisargShah1410
           github_mail: nisargshah01410@gmail.com
+          repository: git_com
           
