--- a/.github/workflows/changes.yml
+++ b/.github/workflows/changes.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
     branches: [ main ]
 jobs:
-  date:
+  commit_history:
     runs-on: ubuntu-latest
     steps:
       # Checkout the branch
