--- a/.github/workflows/changes.yml
+++ b/.github/workflows/changes.yml
@@ -17,5 +17,5 @@ jobs:
         with:
           github_handle: NisargShah1410
           github_mail: nisargshah01410@gmail.com
-          repository: goexample
+          repository: git_com
           
