--- a/.github/workflows/trigger_wait.yml
+++ b/.github/workflows/trigger_wait.yml
@@ -13,5 +13,5 @@ jobs:
         with:
           owner: NisargShah1410
           repo: git_act
-          workflow_file_name: main.yml
+          workflow_file_name: pull_req.yml
           github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
