--- a/.github/workflows/wait_trigger.yml
+++ b/.github/workflows/wait_trigger.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           owner: NisargShah1410
           repo: graph_act
-          workflow_file_name: pull_req.yml
+          workflow_file_name: pull1.yml
           github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
           propagate_failure: false
           trigger_workflow: true
